Rapid Prd/src/objects/Campaign_Spend__c.object
<CustomObject>
    <description>Campaign Spend Child object for Campaign</description>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Spends</relationshipLabel>
        <relationshipName>Campaign_Spends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Month of Start Date</description>
        <formula>MONTH( Start_Date__c )</formula>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year of Start Date</description>
        <formula>YEAR( Start_Date__c )</formula>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Campaign Spend</label>
    <nameField>
        <displayFormat>CS-{000000000}</displayFormat>
        <label>Campaign Spend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Spends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>